ftpreview/dlli.h

typedef void *DWYCO_LIST;
typedef  void (DWYCOCALLCONV *DwycoStatusCallback)(int id, const char *msg, int percent_done, void *user_arg);
typedef  void (DWYCOCALLCONV *DwycoCommandCallback)(const char *cmd, void *user_arg, int succ, const char *failed_reason);
// note: elide value since interpretation depends on type arg, so printing it
// generically can cause problems
typedef  void (DWYCOCALLCONV *DwycoChatCtxCallback)(int cmd, int ctx_id, const char *uid, int len_uid, const char *name, int len_name, int type, const char *value_elide, int val_len, int qid, int extra_arg);
typedef  void (DWYCOCALLCONV *DwycoChatCtxCallback2)(int cmd, int ctx_id, const char *uid, int len_uid, const char *name, int len_name, DWYCO_LIST lst, int qid, int extra_arg);
void DWYCOEXPORT dwyco_set_pal_auth_callback(DwycoPalAuthCallback cb);
// this is the request to take the podium. you will receive
// a "grant" message if and when you get the podium (which may be
// never.) this always adds you to the end. if you call it multiple times
// while on the q, each time, you are put back down to the end of the q.
int DWYCOEXPORT dwyco_chat_addq(int q);
// if you set uid = 0 in this call, it uses the UID of the current user.
// if uid != 0 and uid != current user, you must be a god.
// use this call to recind your q add request. calling it if you are not
// on the q is a noop.
int DWYCOEXPORT dwyco_chat_delq(int q, const char *uid, int len_uid);
// use this to indicate that you want to transition thru the grace-period
// timeout directly to the "talk-time" limit. normally this is handled
// automatically by the dll when audio is acquired and starts streaming
// into the chat server. this is useful mostly for testing without audio
int DWYCOEXPORT dwyco_chat_talk(int q);
// don't send me any audio if on == 1
int DWYCOEXPORT dwyco_chat_mute(int q, int on);
// only allows gods, demigods, or a particular uid to have the podium. gods can set any flag. demigods can set the
// demigod flag and the uid. whenever you call this function, everyone is kicked off the q and must readd themselves.
int DWYCOEXPORT dwyco_chat_set_filter(int q, int gods_only,  int demigods_only, const char *uid, int len_uid);
// only gods can use the next 2 functions
int DWYCOEXPORT dwyco_chat_set_demigod(const char *uid, int len_uid, int on);
int DWYCOEXPORT dwyco_chat_clear_all_demigods();
// send the ui-activity attribute to chat-local users
// WARNING: DLL uses nil and "idle" for internal states
// if active == 1, the dll will send "nil" for the attribute
// if active == 0, the dll will send "idle"
// in both cases, "state" argument is ignored
// if active == -1, the dll will send the value of "state"
// make it something descriptive, but you must coordinate with other
// clients, since there will be incompatibilities otherwise.
int DWYCOEXPORT dwyco_chat_set_activity_state(int active, const char *state, int len_state);
// send a popup message to all local users as a "sys_attr".
// if global == 1, then it sends it to *all* users connected to all
// chat servers in the system. you can send local popups if you
// are a sub-god or demi-god or god.
// you must be a god to send a global popup.
int DWYCOEXPORT dwyco_chat_send_popup(const char *text, int len_text, int global);
// users are normally in an unblocked state.
// sets the unix time at which a users input will be unblocked to the current time
// PLUS the tm parameter (tm in seconds). set tm to -1 to immediately unblock a user.
// set tm to a positive number to block input from the user (for example, setting tm
// to 60 blocks a user for 60 seconds). only demigods can use this function.
// when a user is blocked, all of their input is discarded.
// as of 5/14/07, this isn't true anymore: "however,
// that user STILL RECEIVES all chat server output."
// a user that is blocked is immediately kicked off the q/podium.
int DWYCOEXPORT dwyco_chat_set_unblock_time(int q, const char *uid, int len_uid, int tm);
int DWYCOEXPORT dwyco_chat_set_unblock_time2(int q, const char *uid, int len_uid, int tm, const char *reason);
// this function prompts the server to belch out the current demigod and
// block lists. they come in as SYS_ATTRs, and the block records come in
// as vectors, and you can use these constants to access the record:
#define DWYCO_BLOCK_REC_BLOCKEE_UID "000"
#define DWYCO_BLOCK_REC_UNBLOCK_TIME "001"  // absolute time (unix time) when record become invalid
#define DWYCO_BLOCK_REC_BLOCKER_UID "002"
#define DWYCO_BLOCK_REC_BLOCKED_WHEN "003"	// absolute time (unix time) when the block was issued
#define DWYCO_BLOCK_REC_REASON "004"
int DWYCOEXPORT dwyco_chat_get_admin_info();
void DWYCOEXPORT dwyco_set_chat_ctx_callback(DwycoChatCtxCallback cb);
void DWYCOEXPORT dwyco_set_chat_ctx_callback2(DwycoChatCtxCallback2 cb);
void DWYCOEXPORT dwyco_set_chat_server_status_callback(DwycoStatusCallback cb);
void DWYCOEXPORT dwyco_chat_create_user_lobby(const char *dispname,
        const char *category,
        const char *sub_god_uid, int len_sub_god_uid,
        const char *pw, int user_limit, DwycoCommandCallback cb, void *user_arg);
void DWYCOEXPORT dwyco_chat_remove_user_lobby(const char *lobby_id, DwycoCommandCallback cb, void *user_arg);
// use this version if you just want an integer back.
// returns -1 if the asshole factor isn't valid yet
// returns -2 if the users isn't registered and the trial as expired
// otherwise returns an integer between 0 and 99 (inclusive)
int DWYCOEXPORT dwyco_get_ah2(const char *uid, int len_uid);
// NOTE: ca nov 2009, pal authorization is defunct in favor
// of "pals only" filtering and mutual ignore
//
// NOTE: callback "succ" arg has special meaning:
// 1: user requires authorization
// 0: FAILED (couldn't get state for some reason)
// -1: user doesn't require authorization
void DWYCOEXPORT dwyco_get_pal_auth_state(const char *uid, int len_uid, DwycoCommandCallback cb, void *user_arg);
// sets our pal auth state in the server so others
// know what our preference is.
// state is:
// 1: requires authorization
// 0: doesn't require authorization
void DWYCOEXPORT dwyco_set_pal_auth_state(int state, DwycoCommandCallback cb, void *user_arg);
// gets the local pal auth state: 1=requires auth, 0=not
int DWYCOEXPORT dwyco_get_my_pal_auth_state();
// this will return 1 if the authorization list you have
// does not match your id# (ie, you changed your id#
// by changing the auth file or something.)
// when this happens, the user should have the option
// of removing all the authorizations (they won't work
// anymore), or leaving them.
int DWYCOEXPORT dwyco_get_pal_auth_warning();
int DWYCOEXPORT dwyco_pal_auth_granted(const char *uid, int len_uid);
void DWYCOEXPORT dwyco_revoke_pal_auth(const char *uid, int len_uid);
void DWYCOEXPORT dwyco_clear_pal_auths();
// msg_id should refer to a local message that is
// a special pal auth message.
// call this function in response to receiving a
// pal authorization request and getting a positive user response:
// suggestions for buttons on request dialog:
// YES = grant authorization, but do not take advantage of
// reverse authorization (ie, don't put them on your list.)
// YES+ADD = grant authorization and accept pre-authorization from user. (set add_them to 1)
// NO = do not call this function. just delete message and do nothing.
// NO+IGNORE = do not call this function. delete message and ignore the user.
//
// also, call this function when you get a "palrej" message
//
// if uid == 0, msg_id must refer to an unsaved msg that has been fetched
// from the server.
// if uid != 0, msg_id must refer to a saved msg from uid (NOTE: this is broken)
int DWYCOEXPORT dwyco_handle_pal_auth(const char *uid, int len_uid, const char *msg_id, int add_them);
// pals-only filtering
// if on == 1, then filtering is turned on, and all
// messages and calls will be rejected from users not on the pal list.
// if on == 0, then no pal filtering is done. to test: turning pal
// filtering on/off while there are q'd messages is likely to be
// broken in some way (ie, the filtering is done when the msg is
// received, not when it is accessed.)
// in addition, this function informs chat-local users of your
// pal-filtering state.
void DWYCOEXPORT dwyco_set_pals_only(int on);
int DWYCOEXPORT dwyco_get_pals_only();
// To toggle sending auto-replies, see set_zap_data/send_auto_reply.
//
// By default, if there is no auto-reply message set, the dll will send
// a default text auto-reply stating the user is only accepting calls and
// messages from pals.
// This call makes it possible for the message to be any zap message.
// The text and media referenced by the composer are saved into a local
// message that is stored as a "sent" message in the current users own
// message box. It becomes a normal message, and the msgid is stored
// by the DLL to be used for auto-replies. To form the auto-reply, the
// DLL forwards the message to the recipient.
// To revert back to the default auto-reply, call this function with
// "text" == 0 or compid == 0.
// The message is not removed, just the msgid refering to it.
// There is no way to reinstate a previous message with this simple api at the moment.
// There is no way to remove the message other than the usual remove message call
// There is no way to get the msgid.
// obviously, this api needs to be improved a bit to make it possible to
// provide an easier UI.
int DWYCOEXPORT dwyco_set_auto_reply_msg(const char *text, int len_text, int compid);
int DWYCOEXPORT dwyco_channel_streams(int chan_id, int *send_video, int *recv_video, int *send_audio, int *recv_audio, int *pubchat, int *privchat);
// this returns 1 if it found the
// id, and 0 otherwise. the list returned will be a singleton list
// (1 row, no columns).
int DWYCOEXPORT dwyco_get_lobby_name_by_id2(const char *id, DWYCO_LIST *list_out);
int DWYCOEXPORT dwyco_make_special_zap_composition(
    int special_type,
    const char *user_id,
    const char *user_block,
    int len_user_block
);