bld/cdc32/old/cdcdll.pas


// this is the request to take the podium. you will receive
// a "grant" message if and when you get the podium (which may be
// never.) this always adds you to the end. if you call it multiple times
// while on the q, each time, you are put back down to the end of the q.
function dwyco_chat_addq(q: Integer): Integer;stdcall  ;

// if you set uid = 0 in this call, it uses the UID of the current user.
// if uid != 0 and uid != current user, you must be a god.
// use this call to recind your q add request. calling it if you are not
// on the q is a noop. 
function dwyco_chat_delq(q: Integer; uid: PChar; len_uid: Integer): Integer;stdcall  ;

// use this to indicate that you want to transition thru the grace-period
// timeout directly to the "talk-time" limit. normally this is handled
// automatically by the dll when audio is acquired and starts streaming
// into the chat server. this is useful mostly for testing without audio
function dwyco_chat_talk(q: Integer) : Integer;stdcall  ;

// don't send me any audio if on == 1
function dwyco_chat_mute(q: Integer; enable: Integer) : Integer; stdcall  ;
// only allows gods, demigods, or a particular uid to have the podium. gods can set any flag. demigods can set the
// demigod flag and the uid. whenever you call this function, everyone is kicked off the q and must readd themselves.
function dwyco_chat_set_filter(q, gods_only, demigods_only : Integer; uid: Pchar; len_uid : Integer): Integer;stdcall  ;
// only gods can use the next 2 functions
function dwyco_chat_set_demigod(uid : PChar; len_uid: Integer; enabled: Integer): Integer;stdcall  ;
function dwyco_chat_clear_all_demigods(): Integer;stdcall  ;

// users are normally in an unblocked state.
// sets the unix time at which a users input will be unblocked nutil the current time
// PLUS the tm parameter (tm in seconds). set tm to -1 to immediately unblock a user.
// set tm to a positive number to block input from the user (for example, setting tm
// to 60 blocks a user for 60 seconds). only demigods can use this function.
// when a user is blocked, all of their input is discarded.
// a user that is blocked is immediately kicked off the q/podium.
// as of 5/15/07, blocked users are also disconnected from the server
function dwyco_chat_set_unblock_time(q: Integer; uid: PChar; len_uid: Integer; tm: Integer): Integer;stdcall  ;
function dwyco_chat_set_unblock_time2(q: Integer; uid: PChar; len_uid: Integer; tm: Integer; reason: PChar): Integer;stdcall  ;

// this function prompts the server to belch out the current demigod and
// block lists. they come in as SYS_ATTRs, and the block records come in
// as vectors, and you can use these constants to access the record:
const DWYCO_BLOCK_REC_BLOCKEE_UID = '000';
const DWYCO_BLOCK_REC_UNBLOCK_TIME = '001'; // absolute time (unix time) when record become invalid
const DWYCO_BLOCK_REC_BLOCKER_UID = '002';
const DWYCO_BLOCK_REC_BLOCKED_WHEN = '003'; // absolute time (unix time) when the block was issued
const DWYCO_BLOCK_REC_REASON = '004' ;
function  dwyco_chat_get_admin_info(): Integer; stdcall  ;

procedure dwyco_set_chat_ctx_callback(cb: DwycoChatCtxCallback);stdcall  ;
procedure dwyco_set_chat_ctx_callback2(cb: DwycoChatCtxCallback2);stdcall  ;
procedure dwyco_set_chat_server_status_callback(cb: DwycoStatusCallback);stdcall  ;

procedure dwyco_chat_create_user_lobby(dispname: PChar;
	                               category: PChar;
	                               subgod_uid: PChar; len_sub_god_uid: Integer;
	                               pw: PChar;
	                               user_limit: Integer;
                                       cb: DwycoCommandCallback;
	                               user_arg: Pointer);stdcall  ;

procedure dwyco_chat_remove_user_lobby(lobby_id: PChar;
	                               cb: DwycoCommandCallback;
	                               user_arg: Pointer);stdcall  ;

// it returns 1 if it finds the
// id, and 0 otherwise. the list returned will be a singleton list
// (1 row, no columns).

function dwyco_get_lobby_name_by_id2(id: PChar; var list_out: DWYCO_LIST): Integer; stdcall;

// returns 1 if chan_id found, and the channels current streaming
// media types. returns 0 otherwise.
function dwyco_channel_streams(chan_id: Integer; 
	var send_video: Integer;
	var recv_video: Integer;
	var send_audio: Integer;
	var recv_audio: Integer;
	var pub_chat: Integer;
	var priv_chat: Integer): Integer; stdcall;


// send the ui-activity attribute to chat-local users and
// to pals (not impl).
// WARNING: DLL uses nil and "idle" for internal states
// if active == 1, the dll will send "nil" for the attribute
// if active == 0, the dll will send "idle"
// in both cases, "state" argument is ignored
// if active == -1, the dll will send the value of "state"
// make it something descriptive, but you must coordinate with other
// clients, since there will be incompatibilities otherwise.

function dwyco_chat_set_activity_state(active: Integer; state: Pchar; len_state: Integer): Integer; stdcall;

// send a popup message to all local users as a "sys_attr".
// if global == 1, then it sends it to *all* users connected to all
// chat servers in the system. you can send local popups if you
// are a sub-god or demi-god or god.
// you must be a god to send a global popup.

function dwyco_chat_send_popup(text: PChar; len_text: Integer; global: Integer) : Integer; stdcall;

// pals-only filtering
// if on == 1, then filtering is turned on, and all
// messages and calls will be rejected from users not on the pal list.
// if on == 0, then no pal filtering is done. to test: turning pal
// filtering on/off while there are q'd messages is likely to be
// broken in some way (ie, the filtering is done when the msg is
// received, not when it is accessed.)
// in addition, this function informs chat-local users of your
// pal-filtering state.
procedure dwyco_set_pals_only(on: Integer); stdcall;
function dwyco_get_pals_only(): Integer; stdcall;

// To toggle sending auto-replies, see set_zap_data/send_auto_reply.
//
// By default, if there is no auto-reply message set, the dll will send
// a default text auto-reply stating the user is only accepting calls and
// messages from pals.
// This call makes it possible for the message to be any zap message.
// The text and media referenced by the composer are saved into a local
// message that is stored as a "sent" message in the current users own
// message box. It becomes a normal message, and the msgid is stored
// by the DLL to be used for auto-replies. To form the auto-reply, the
// DLL forwards the message to the recipient.
// To revert back to the default auto-reply, call this function with
// "text" == 0 or compid == 0.
// The message is not removed, just the msgid refering to it.
// There is no way to reinstate a previous message with this simple api at the moment.
// There is no way to remove the message other than the usual remove message call
// There is no way to get the msgid.
// obviously, this api needs to be improved a bit to make it possible to
// provide an easier UI.
function dwyco_set_auto_reply_msg(text: PChar; len_text: Integer; compid: Integer): Integer; stdcall;


procedure dwyco_set_old_pal_recv(i: Integer);stdcall  ;


// use this version if you just want an integer back.
// returns -1 if the asshole factor isn't valid yet
// returns -2 if the users isn't registered and the trial as expired
// otherwise returns an integer between 0 and 99 (inclusive)
function dwyco_get_ah2(uid: PChar; len_uid: Integer): Integer; stdcall;

//NOTE: PAL AUTHORIZATION IS DEFUNCT CA nov 2009
//
//{PAL AUTHORIZATION RELATED FUNCTIONS}
//{
//This callback is fired after a call to "pal_add" IF
//the target user requires pal authorization. Note that
//it is not a problem if the pal is in the pal list and
//authorization is not granted. The pal server will not honor
//the pal request unless the receiving party grants authorization.
//See the constants below for various status conditions reported
//by this callback.
//
//When this callback is fired, here is where you start the
//pal authorization chain of events.
//}
//procedure dwyco_set_pal_auth_callback(cb: DwycoPalAuthCallback); stdcall;
//{
//
//// NOTE: callback "succ" arg has special meaning:
//// 1: user requires authorization
//// 0: FAILED (couldn't get state for some reason)
//// -1: user doesn't require authorization
//NOTE: YOU SHOULD NOT NEED TO USE THIS FUNCTION DIRECTLY
//UNLESS YOU NEED TO KNOW THE PAL AUTH STATE EXPLICITLY (like for
//display or something). normally, the pal_auth_callback will be
//fired after a pal_add for cases where pal authorization is needed.
//}
//procedure dwyco_get_pal_auth_state(uid: PChar; len_uid: Integer; cb: DwycoCommandCallback; user_arg:Pointer); stdcall;
//
//{
//// sets our pal auth state in the server so others
//// know what our preference is.
//// state is:
//// 1: requires authorization
//// 0: doesn't require authorization
//}
//procedure dwyco_set_pal_auth_state(state: Integer; cb: DwycoCommandCallback; user_arg:Pointer); stdcall;
//
//{
//// gets the local pal auth state: 1=requires auth, 0=not
//NOTE: THE RESULTS OF THIS FUNCTION ARE INVALID UNTIL YOU
//HAVE LOGGED INTO THE DATABASE SERVER.
//}
//function dwyco_get_my_pal_auth_state(): Integer ; stdcall;
//
//{
//// this will return 1 if the authorization list you have
//// does not match your id# (ie, you changed your id#
//// by changing the auth file or something.)
//// when this happens, the user should have the option
//// of removing all the authorizations (they won't work
//// anymore), or leaving them.
//}
//function dwyco_get_pal_auth_warning(): Integer; stdcall;
//
//{
//Returns  1 if the user appears to be authorized by you
//}
//function dwyco_pal_auth_granted(uid: PChar; len_uid:Integer): Integer; stdcall;
//
//{
//This removes the authorization for a user locally. After calling
//this function, that remote user will no longer be able to track
//you via their pal list. NOTE: THIS DOES NOT REMOVE THE USER FROM
//THE REMOTE PERSONS PAL LIST. If you want to do that, try the
//"pal reject" special message.
//}
//procedure dwyco_revoke_pal_auth(uid: Pchar; len_uid: Integer); stdcall;
//
//{
//This function removes all pal authorization information
//and resets the igrant/theygrnt files to the current UID.
//}
//procedure dwyco_clear_pal_auths(); stdcall;
//
//{
//This function is used to process the special messages that
//are received during pal authorization negotiation.
//// msg_id should refer to a local message that is
//// a special pal auth message.
//// call this function in response to receiving a
//// pal authorization request and getting a positive user response:
//// suggestions for buttons on request dialog:
//// YES = grant authorization, but do not take advantage of
//// reverse authorization (ie, don't put them on your list.)
//// YES+ADD = grant authorization and accept pre-authorization from user. (set add_them to 1)
//// NO = do not call this function. just delete message and do nothing.
//// NO+IGNORE = do not call this function. delete message and ignore the user.
////
//// also, call this function immediately when you get a "palrej" or "palok"
//// message.
////
//
//function dwyco_handle_pal_auth(msg_id :Pchar; add_them:Integer):Integer ; stdcall;



//  This function is used for making messages that have special meaning
//  (or payloads). For now, this is used to send special "pal authorization"
//  messages via the server.
//  special_type = (one of the constants below, PAL_REQ, etc.) all the other
//  args are ignored for now. eventually they will be used for passing user
//  defined messages between clients.
function dwyco_make_special_zap_composition(special_type: Integer;
                                            user_id: PChar;
                                            user_block: PChar;
                                            len: Integer): Integer ;  stdcall;
